done with bp nu feedback en herlezen

--- a/bachproef/VanDorpeLukasBP.tex
+++ b/bachproef/VanDorpeLukasBP.tex
@@ -139,7 +139,7 @@
 
 %---------- Inhoud, lijst figuren, ... -----------------------------------------
 
-∑\tableofcontents
+\tableofcontents
 
 % In a list of figures, the complete caption will be included. To prevent this,
 % ALWAYS add a short description in the caption!
