--- a/bachproef/conclusie.tex
+++ b/bachproef/conclusie.tex
@@ -14,5 +14,10 @@
 % Heeft het onderzoek geleid tot nieuwe vragen die uitnodigen tot verder 
 %onderzoek?
 
-\lipsum[76-80]
+In dit onderzoek wordt een antwoord gegeven op de onderzoeksvraag: “Welke technologieën kan het bedrijf Lockit Rentals toepassen om hun bedrijfsactiviteiten bij het verhuren van lockers te optimaliseren?”. Verder geven de deelonderzoeksvragen een duiding welke probleemstellingen er in dit onderzoek behandeld moeten worden. Er is ingespeeld op de eisen die vooraf zijn opgesteld zowel voor het zoeken naar optimalisatie van het scanproces alsook voor het terugwinnen van de verloren of beschadigde QR-codes. \newline
+Het bestuur van Lockit Rentals heeft aangehaald dat de QR-scanner een onderdeel was van het smart locker systeem dat nog niet op punt stond. Deze potentiële problemen worden als storend ervaren bij de huurders. De eerste doelstelling was om de leessnelheid en nauwkeurigheid van QR-code scanners te verbeteren. Onderzoek duidt aan dat het gebruik van gespecifieerde QR-code scanner een positieve invloed kon voortbrengen. Bij eigen experimenten kan deze stelling bekrachtigd worden. Een QR-code scanner ten opzichte van een QR-code camera met eigen herkenningsalgoritme kan betere QR-codes  uitlezen en verwerken. De resultaten tonen aan dat het uitlezen van QR-codes in een donkere omgeving een uitdaging vormt. Daarom moet kunstmatig licht altijd aanwezig zijn als we op alle momenten van de dag willen scannen. Beschadigde QR-codes kunnen uitgelezen worden door gespecialiseerde QR-codes. Maar in vergelijking met de huidige camera merken we op dat dit herkenningsalgoritme niet voldoende op punt staat om beschadigde QR-codes te detecteren.\newline
+Niet alleen kunnen we dit concluderen op vlak van experimenten maar ook op vlak van functionaliteit die de huidige QR-camera niet bezit. Zo heeft de nieuwe QR-scanner veel configuratiemogelijkheden die de gewone USB camera niet heeft. Een belangrijke configuratie is de eventuele eigen kunstmatige lichtbron ter hoogte van de lens, hierdoor zal de getoonde QR-code een beter contrast geven tussen de pixels van de QR-code. Dit contrast brengt positieve invloed op de leessnelheid. Ook zijn allerlei detectie snelheden en fouttoleratie configuraties toepasbaar op de nieuwe QR-scanner, op deze manier kan de scanervaringen van de festivalgangers aangenamer gemaakt worden.
+\newline
+Om de verloren QR-code terug te winnen is er gefocust op de vooraf gemaakte eisen van Lockit Rentals. Het was duidelijk dat het ontwerpen van een geautomatiseerde chatbot een geschikte oplossing zou zijn. Het maken van een chatbot kan echter heel tijdrovend zijn. De gebruikte chatbot service BotPress is in dit onderzoek gehanteerd. Deze is gekozen voor zijn positieve aspecten dat overeenstemmen met de opgelegde eisen. BotPress is gratis te gebruiken voor een bepaald aantal verstuurde berichten, het geeft veel vrijheid naar de ontwikkelaar en het is makkelijk te integreren op andere platformen.\newline
+De gemaakte chatbot toont aan dat deze een perfecte oplossing biedt voor het terugwinnen van QR-codes en voor het verschaffen van praktische hulp ten behoeve van de eindgebruiker. Deze conclusies zijn gebaseerd op de specifieke omstandigheden waarin de verkoop uitsluitend online plaatsvindt. Als men toegangscodes zal verkopen op papier zal het terugwinnen van verloren QR-codes enkel gebeuren door logistieke medewerkers.
 
