--- a/bachproef/samenvatting.tex
+++ b/bachproef/samenvatting.tex
@@ -42,4 +42,4 @@
 
 \chapter*{\IfLanguageName{dutch}{Samenvatting}{Abstract}}
 
-Moderne technologieën zijn niet meer weg te denken in onze dagdagelijkse samenleving. Wanneer mensen aanwezig zijn op evenementen of festivals willen ze deze elementen ook aanvoelen en hanteren voor algemeen gebruiksgemak. Lockit Rentals heeft daarvoor nieuwe smart locker systemen opgebouwd om festivalgangers de gelegenheid te geven hun persoonlijke bezittingen veilig en eenvoudig op te bergen. De onveranderlijke omgevingen   waarin toegangscodes gescand worden kan zeer hard beïnvloed worden door allerlei factoren. Daarom zal onderzoek toont dat het scannen van toegangscodes in vorm van QR-codes de specialiseerde QR-code scanners meer geschikt zijn in plaats van de hedendaags gebruikte camera’s. De positieve elementen komen pas echt naar voor in de meer extremere omgevingen zoals heel veel licht of beschadigde QR-codes. De garantie dat de koper de toegangscode in een perfecte staat bewaren, is beperkt. Om dit risico te vermijden is Lockit Rentals verplicht om tijdens de volledige tijdsduur van een festival logistieke medewerkers te voorzien om de QR-code opnieuw te genereren. Uit bijkomstig onderzoek en opgestelde eisen van het bestuur van het locker bedrijf zal aangeven dat een geautomatiseerde chatbot deze logistieke medewerkers te vervangen. De chatbot kan de huurder zowel technische als informatieve hulp aanbieden. Dit onderzoek kan verder uitgewerkt worden in een statistisch onderzoek bij het implementeren van gegeven conclusies.
+Moderne technologieën zijn niet meer weg te denken in onze dagdagelijkse samenleving. Wanneer mensen aanwezig zijn op evenementen of festivals willen ze deze elementen ook aanvoelen en hanteren voor algemeen gebruiksgemak. Lockit Rentals heeft daarvoor nieuwe smart locker systemen opgebouwd om festivalgangers de gelegenheid te geven hun persoonlijke bezittingen veilig en eenvoudig op te bergen. De veranderlijke omgevingen waarin toegangscodes gescand worden kunnen zeer sterk beïnvloed worden door allerlei factoren. Daarom zal onderzoek aantonen dat het scannen van toegangscodes beter afgehandeld wordt door gespecialiseerde QR-code scanners in plaats van de huidige gebruikte camera’s. De positieve aspecten worden extra benadrukt in extremere omgevingen of situaties zoals lichtinval of beschadigde QR-codes. De garantie dat de koper de toegangscode in een perfecte staat bewaart, is beperkt. Om dit risico te vermijden is Lockit Rentals verplicht om tijdens de volledige tijdsduur van een evenement logistieke medewerkers te voorzien. Uit bijkomstig onderzoek en opgestelde eisen van het bestuur van het locker bedrijf zal blijken dat een geautomatiseerde chatbot geschikt is om logistieke medewerkers te vervangen. De chatbot kan de huurder zowel technische als praktische hulp aanbieden. Deze geanalyseerde technologiën kunnen een positieve impact geven op het verhuur van lockers.
